--- a/nuestrosproductos.html
+++ b/nuestrosproductos.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/npestilos.css">
     <title>Nuestros Productos</title>
 </head>
+<STYLE>A {text-decoration: none;} </STYLE>
 <body>
     <header>
         <section id="encabezadocolor">
