--- a/quienessomos.html
+++ b/quienessomos.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/npestilos.css">
     <title>QUIENES SOMOS</title>
 </head>
+<STYLE>A {text-decoration: none;} </STYLE>
 <body>
     <!----------------------------------------------CABEZA-------------------------------------------------------->
     <header> <!---------ENCABEZADO------------------->
