--- a/misionvision.html
+++ b/misionvision.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/contacto.css">
     <title>CONTACTO</title>
 </head>
+<STYLE>A {text-decoration: none;} </STYLE>
 <body>
     <!----------------------------------------------CABEZA-------------------------------------------------------->
     <header> <!---------ENCABEZADO------------------->
