--- a/contacto.html
+++ b/contacto.html
@@ -35,7 +35,7 @@
     <!----------------------------------------------CUERPO PRINCIPAL-------------------------------------------------------->
 <hr><br><br>
     <section id="pri1"> <!--------INICIO PRINCIPAL 1-->
-        <p>Para mas informacion escrenos a cualquiera de nuestras redes sociales: </p><br><br><br>
+        <p>Para mas informacion escribenos a cualquiera de nuestras redes sociales: </p><br><br><br>
         <div id="infoface">
         </div>
         <div>
